<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".register.RegisterFragment">

    <data>

        <variable
            name="myViewModel"
            type="com.stupa.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/_8sdp"
            android:text="@string/tv_please_register_user"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="32dp"
            tools:layout_conversion_absoluteWidth="379dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:hint="@string/name"
            android:layout_marginTop="@dimen/_8sdp"
            android:textColorHint="@color/purple"
            android:theme="@style/EditTextThemeOverlay"
            app:boxStrokeColor="@color/purple"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            app:helperTextTextAppearance="@style/HelperTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_register">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="@dimen/_4sdp"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:singleLine="true"
                android:text="@={myViewModel.inputName}"
                android:textColorHighlight="@color/textColorHighlight" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.hbb20.CountryCodePicker
            android:id="@+id/countryCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_country_code"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_4sdp"
            android:paddingVertical="@dimen/_8sdp"
            app:ccp_countryPreference="IN"
            app:ccp_showArrow="false"
            app:ccp_showFlag="false"
            app:ccp_showNameCode="false"
            app:layout_constraintStart_toStartOf="@+id/edt_name_layout"
            app:layout_constraintTop_toBottomOf="@+id/edt_name_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_phone_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:hint="@string/phone"
            android:layout_marginTop="@dimen/_6sdp"
            android:textColorHint="@color/purple"
            android:theme="@style/EditTextThemeOverlay"
            app:boxStrokeColor="@color/purple"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            app:helperTextTextAppearance="@style/HelperTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/countryCode"
            app:layout_constraintTop_toBottomOf="@id/edt_name_layout">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="@dimen/_4sdp"
                android:paddingStart="@dimen/_8sdp"
                android:paddingTop="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:singleLine="true"
                android:maxLength="10"
                android:digits="0123456789"
                android:inputType="phone"
                android:text="@={myViewModel.inputPhone}"
                android:textColorHighlight="@color/textColorHighlight" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:hint="@string/tv_email"
            android:textColorHint="@color/purple"
            android:theme="@style/EditTextThemeOverlay"
            app:boxStrokeColor="@color/purple"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            app:helperTextTextAppearance="@style/HelperTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_phone_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/_6sdp"
                android:paddingStart="@dimen/_8sdp"
                android:paddingTop="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:text="@={myViewModel.inputEmail}"
                android:textColorHighlight="@color/textColorHighlight" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:hint="@string/tv_password"
            android:textColorHint="@color/purple"
            android:theme="@style/EditTextThemeOverlay"
            app:boxStrokeColor="@color/purple"
            app:passwordToggleEnabled="true"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            app:helperTextTextAppearance="@style/HelperTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_email_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="@dimen/_4sdp"
                android:ems="15"
                android:paddingStart="@dimen/_8sdp"
                android:paddingTop="@dimen/_16sdp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:text="@={myViewModel.inputPassword}"
                android:textColorHighlight="@color/textColorHighlight" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:onClick="@{()->myViewModel.registerSubmitButton()}"
            android:text="@string/submitButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_password_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>